--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "zendframework/zend-form": "*",
         "zendframework/zend-i18n": "*",
         "zfcampus/zf-development-mode": "^3.0",
-        "zendframework/zend-navigation": "^2.8"
+        "zendframework/zend-navigation": "^2.8",
+        "zendframework/zend-paginator": "^2.8"
     },
     "autoload": {
         "psr-4": {
