--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "doctrine/orm": "^2.6",
         "doctrine/doctrine-module": "^2.1",
         "doctrine/dbal": "^2.7",
-        "zendframework/zend-json": "^3.1"
+        "zendframework/zend-json": "^3.1",
+        "zendframework/zend-session": "^2.8"
     },
     "autoload": {
         "psr-4": {
