--- a/composer.json
+++ b/composer.json
@@ -1,58 +1,59 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for Zend Framework zend-mvc applications",
-    "type": "project",
-    "license": "BSD-3-Clause",
-    "keywords": [
-        "framework",
-        "mvc",
-        "zf"
-    ],
-    "homepage": "http://framework.zend.com/",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-        "zendframework/zend-mvc": "^3.0.1",
-        "zendframework/zend-db": "*",
-        "zendframework/zend-form": "*",
-        "zendframework/zend-i18n": "*",
-        "zfcampus/zf-development-mode": "^3.0",
-        "zendframework/zend-navigation": "^2.8",
-        "zendframework/zend-paginator": "^2.8",
-        "zendframework/zend-mvc-i18n": "^1.0",
-        "zendframework/zend-debug": "^2.5",
-        "doctrine/doctrine-orm-module": "^2.1",
-        "doctrine/orm": "^2.6",
-        "doctrine/doctrine-module": "^2.1",
-        "doctrine/dbal": "^2.7",
-        "zendframework/zend-json": "^3.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "Application\\": "module/Application/src/",
-            "Album\\": "module/Album/src/",
-            "Blog\\": "module/Blog/src/",
-            "Customer\\": "module/Customer/src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "ApplicationTest\\": "module/Application/test/"
-        }
-    },
-    "extra": [],
-    "scripts": {
-        "cs-check": "phpcs",
-        "cs-fix": "phpcbf",
-        "development-disable": "zf-development-mode disable",
-        "development-enable": "zf-development-mode enable",
-        "development-status": "zf-development-mode status",
-        "post-create-project-cmd": [
-            "@development-enable"
-        ],
-        "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
+  "name": "zendframework/skeleton-application",
+  "description": "Skeleton Application for Zend Framework zend-mvc applications",
+  "type": "project",
+  "license": "BSD-3-Clause",
+  "keywords": [
+    "framework",
+    "mvc",
+    "zf"
+  ],
+  "homepage": "http://framework.zend.com/",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require": {
+    "php": "^7.1",
+    "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
+    "zendframework/zend-mvc": "^3.0.1",
+    "zendframework/zend-db": "*",
+    "zendframework/zend-form": "*",
+    "zendframework/zend-i18n": "*",
+    "zfcampus/zf-development-mode": "^3.0",
+    "zendframework/zend-navigation": "^2.8",
+    "zendframework/zend-paginator": "^2.8",
+    "zendframework/zend-mvc-i18n": "^1.0",
+    "zendframework/zend-debug": "^2.5",
+    "doctrine/doctrine-orm-module": "^2.1",
+    "doctrine/orm": "^2.6",
+    "doctrine/doctrine-module": "^2.1",
+    "doctrine/dbal": "^2.7",
+    "zendframework/zend-json": "^3.1",
+    "zendframework/zend-session": "^2.8"
+  },
+  "autoload": {
+    "psr-4": {
+      "Application\\": "module/Application/src/",
+      "Album\\": "module/Album/src/",
+      "Blog\\": "module/Blog/src/",
+      "Customer\\": "module/Customer/src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "ApplicationTest\\": "module/Application/test/"
+    }
+  },
+  "extra": [],
+  "scripts": {
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf",
+    "development-disable": "zf-development-mode disable",
+    "development-enable": "zf-development-mode enable",
+    "development-status": "zf-development-mode status",
+    "post-create-project-cmd": [
+      "@development-enable"
+    ],
+    "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
+    "test": "phpunit"
+  }
 }
