--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
     "doctrine/doctrine-module": "^2.1",
     "doctrine/dbal": "^2.7",
     "zendframework/zend-json": "^3.1",
-    "zendframework/zend-session": "^2.8"
+    "zendframework/zend-session": "^2.8",
+    "zendframework/zend-crypt": "^3.3",
+    "zendframework/zend-authentication": "^2.6"
   },
   "autoload": {
     "psr-4": {
