Update Authentication Service

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
       "Application\\": "module/Application/src/",
       "Album\\": "module/Album/src/",
       "Blog\\": "module/Blog/src/",
-      "Customer\\": "module/Customer/src/"
+      "Customer\\": "module/Customer/src/",
+      "User\\": "module/User/src/"
     }
   },
   "autoload-dev": {
