--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "zendframework/zend-json": "^3.1",
     "zendframework/zend-session": "^2.8",
     "zendframework/zend-crypt": "^3.3",
-    "zendframework/zend-authentication": "^2.6"
+    "zendframework/zend-authentication": "^2.6",
+    "zendframework/zend-mail": "^2.10"
   },
   "autoload": {
     "psr-4": {
