--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "zendframework/zend-session": "^2.8",
     "zendframework/zend-crypt": "^3.3",
     "zendframework/zend-authentication": "^2.6",
-    "zendframework/zend-mail": "^2.10"
+    "zendframework/zend-mail": "^2.10",
+    "doctrine/migrations": "^1.8"
   },
   "autoload": {
     "psr-4": {
